# fairshare

./: .gitignore  API_REFERENCE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile.release  IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  Makefile  POLICY_SYSTEM.md  PR_SUMMARY.md  QUICK_START.md  README.md  RELEASE.md  SECURITY.md  SECURITY_FIXES.md  SYSTEMD_CLIENT_IMPLEMENTATION.md  TASK1_SUMMARY.md  com.fairshare.policy  design_doc.md  fairshare-user-slice.rules  install.sh  task_1.md  task_2.md  test-glibc-compat.sh  test.py  test_policy.yaml  test_systemd_client.sh  uninstall.sh
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh
.github/workflows/: ci.yml  opencode.yml  release.yml  test-release-build.yml  version-check.yml
assets/: 50-fairshare.pkla  50-fairshare.rules  fairshare-wrapper.sh  org.fairshare.policy
docs/: codespaces.md  codespaces_log.txt
examples/: default.yaml  policy_usage.rs  systemd_client_usage.rs
releases/: SHA256SUMS  fairshare-aarch64  fairshare-x86_64
src/: cli.rs  daemon.rs  ipc.rs  lib.rs  main.rs  policy.rs  state.rs  system.rs  systemd.rs  systemd_client.rs  utils.rs
tests/: cli_tests.rs  integration_test.rs  integration_tests.rs
