[package]
name = "fairshare"
version = "0.1.0"
edition = "2021"

[lib]
name = "fairshare"
path = "src/lib.rs"

[[bin]]
name = "fairshared"
path = "src/main.rs"

[[bin]]
name = "fairshare"
path = "src/bin/fairshare.rs"

[dependencies]
tokio = { version = "1.41", features = ["full"] }
zbus = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
libc = "0.2"

[dev-dependencies]
tempfile = "3.8"
