[package]
name = "fairshare"
version = "0.2.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
sysinfo = "0.30"
humansize = "2.1"
users = "0.11"
colored = "2.1"
comfy-table = "7.1"
fs2 = "0.4"
chrono = "0.4"

[dev-dependencies]
tempfile = "3.8"
